[package]
name = "crawl_evals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["stream"] }
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
select = "0.6.0"
tokio = { version = "1.28.0", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time"] }
